--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="keywords" content="mobile, develop, applications, extjs, ext, js, sencha, touch, android, jquery, node, electron, vue">
 	<meta name="description" content="Software developer company">
+	<!-- Open Graph / Facebook -->
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://grupovrs.com/">
+	<meta property="og:title" content="Grupo VRS – Outsource your project with us">
+	<meta property="og:description" content="Software developer company">
+	<meta property="og:image" content="assets/img/social.png">
+	<!-- Twitter -->
+	<meta property="twitter:card" content="summary_large_image">
+	<meta property="twitter:url" content="https://grupovrs.com/">
+	<meta property="twitter:title" content="Grupo VRS – Outsource your project with us">
+	<meta property="twitter:description" content="Software developer company">
+	<meta property="twitter:image" content="assets/img/social.png">
 	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 	<!-- SITE TITLE -->
 	<title>Grupo VRS – Outsource your project with us</title>
