--- a/index.html
+++ b/index.html
@@ -687,7 +687,7 @@
 			<div class="row">
 				<div class="col-sm-12">
 					<div class="section-title text-center">
-						<h2>great in tuch</h2>
+						<h2>get in touch</h2>
 						<span></span>
 					</div>
 				</div>
