--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
 					<div class="great-started-text text-center">
 						<h4>We Are Ready to Help You</h4>
 						<h2>Get the Best Solution for Your Business</h2>
-						<a class="get-start-btn smoth-scroll" href="#home">great-started</a>
+						<a class="get-start-btn smoth-scroll" href="#contact">let's talk</a>
 					</div>
 				</div>
 			</div>
