--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
 	<meta name="description" content="Software developer company">
 	<!-- Open Graph / Facebook -->
 	<meta property="og:type" content="website">
-	<meta property="og:url" content="https://grupovrs.com/">
-	<meta property="og:title" content="Grupo VRS – Outsource your project with us">
+	<meta property="og:url" content="https://ramlogic.co/">
+	<meta property="og:title" content="ramlogic – Outsource your project with us">
 	<meta property="og:description" content="Software developer company">
 	<meta property="og:image" content="assets/img/social.png">
 	<!-- Twitter -->
 	<meta property="twitter:card" content="summary_large_image">
 	<meta property="twitter:url" content="https://grupovrs.com/">
-	<meta property="twitter:title" content="Grupo VRS – Outsource your project with us">
+	<meta property="twitter:title" content="ramlogic – Outsource your project with us">
 	<meta property="twitter:description" content="Software developer company">
 	<meta property="twitter:image" content="assets/img/social.png">
 	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 	<!-- SITE TITLE -->
-	<title>Grupo VRS – Outsource your project with us</title>
+	<title>ramlogic – Outsource your project with us</title>
 	<link rel="manifest" href="site.webmanifest">
 	<!-- FAVICON -->
 	<link rel="apple-touch-icon" sizes="180x180" href="assets/img/apple-touch-icon.png">
