--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<meta property="og:image" content="assets/img/social.png">
 	<!-- Twitter -->
 	<meta property="twitter:card" content="summary_large_image">
-	<meta property="twitter:url" content="https://grupovrs.com/">
+	<meta property="twitter:url" content="https://ramlogic.co/">
 	<meta property="twitter:title" content="ramlogic – Outsource your project with us">
 	<meta property="twitter:description" content="Software developer company">
 	<meta property="twitter:image" content="assets/img/social.png">
@@ -65,7 +65,7 @@
 					<div class="col-md-3">
 						<!-- START LOGO -->
 						<div class="logo">
-							<a href="index.html"><img src="assets/img/logo.png" alt="Grupo VRS" width="70"></a>
+							<a href="index.html"><img src="assets/img/logo.png" alt="ramlogic" width="170"></a>
 						</div>
 						<!-- END LOGO -->
 					</div>
@@ -189,11 +189,11 @@
 					<div class="section-title text-center">
 						<h2>about us</h2>
 						<span></span>
-						<p>Grupo VRS is a software development firm that builds advanced solutions for the financial services, healthcare,
+						<p>ramlogic is a software development firm that builds advanced solutions for the financial services, healthcare,
 						hospitality and media & entertainment industries. We believe teamwork, skills, commitment, and dedication are necessary
 						to obtain excellent results. Our team stays up to date with the latest tools and frameworks in order to provide a wider
 						range of options to our clients. Combining domain knowledge with offshore cost advantages and resource flexibility,
-						Grupo VRS help clients optimize time-to-market and minimize software development risks in mission-critical systems.</p>
+						ramlogic help clients optimize time-to-market and minimize software development risks in mission-critical systems.</p>
 					</div>
 				</div>
 				<!-- END SECTION DESIGN AREA -->
@@ -210,7 +210,7 @@
 					<div class="section-title text-center">
 						<h2>Our Services</h2>
 						<span></span>
-						<p>Custom software development is our core business at Grupo VRS. Whether you are looking for consultants, designers,
+						<p>Custom software development is our core business at ramlogic. Whether you are looking for consultants, designers,
 						programmers or testers, we have great talent on board. We pride ourselves in being very responsive in customer service,
 						strong on quality and effective at getting the job done.</p>
 					</div>
@@ -251,7 +251,7 @@
 						</div>
 						<div class="service-content">
 							<h4>SOFTWARE DEVELOPMENT</h4>
-							<p>Grupo VRS offers services for all phases of the software development life cycle. We work closely with our customers to
+							<p>ramlogic offers services for all phases of the software development life cycle. We work closely with our customers to
 							define project requirements, develop and test the application, as well as write documentation and user’s manuals. We
 							implement applications for a wide range of business needs, including Cloud Services.</p>
 						</div>
@@ -281,7 +281,7 @@
 						</div>
 						<div class="service-content">
 							<h4>MOBILE APPS</h4>
-							<p>We can help you create a great looking custom mobile application that fits your needs perfectly. At Grupo VRS we use the
+							<p>We can help you create a great looking custom mobile application that fits your needs perfectly. At ramlogic we use the
 							latest tools and frameworks to deliver mobile apps for enterprise, entertainment, and social media. We are committed to
 							helping you make your ideas become reality.</p>
 						</div>
@@ -309,7 +309,7 @@
 	<!-- END SERVICES AREA -->
 
 	<!-- START GET-STARTED AREA -->
-	<section class="great-started section-padding">
+	<section id="work" class="great-started section-padding">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12 col-sm-12">
@@ -693,7 +693,7 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-6 col-sm-12 no-padding">
+				<div class="col-md-12 col-sm-12 no-padding">
 					<!-- START CONTACT FROM -->
 					<div class="contact-from">
 						<form action="#" method="post">
@@ -716,11 +716,6 @@
 					</div>
 					<!-- END CONTACT FROM -->
 				</div>
-				<div class="col-md-6 col-sm-12">
-					<!-- START MAP -->
-					<div class="map"></div>
-					<!-- END MAP -->
-				</div>
 			</div>
 		</div>
 	</section>
@@ -734,14 +729,8 @@
 					<!-- START SINGLE WIDGET -->
 					<div class="col-md-3 col-sm-6">
 						<div class="footer-widget">
-							<h4 class="footer-logo"><span>grupo vrs</span></h4>
+							<h4 class="footer-logo"><span>ramlogic</span></h4>
 							<p>A software developer company</p>
-							<div class="footer-social">
-								<ul>
-									<li><a href="https://facebook.com/grupovrs" about="_blank"><i class="fa fa-facebook"></i></a></li>
-									<li><a href="skype://ramirosaenz?chat"><i class="fa fa-skype"></i></a></li>
-								</ul>
-							</div>
 						</div>
 					</div>
 					<!-- END SINGLE WIDGET -->
@@ -775,27 +764,27 @@
 								<div class="single-contact-info">
 									<i class="fa fa-map-marker"></i>
 									<h6>address</h6>
-									<p>Rosario, Argentina</p>
+									<p>San Mateo, California, USA</p>
 								</div>
 								<!-- START SINGLE CONTACT INFO -->
 								<!-- END SINGLE CONTACT INFO -->
 								<div class="single-contact-info">
 									<i class="fa fa-phone"></i>
 									<h6>phone</h6>
-									<p>+54 9 341 6435550</p>
+									<p>+1 276 759 9630</p>
 								</div>
 								<!-- END SINGLE CONTACT INFO -->
 								<!-- START SINGLE CONTACT INFO -->
 								<div class="single-contact-info">
 									<i class="fa fa-envelope-o"></i>
 									<h6>Email</h6>
-									<p>contacto@grupovrs.com</p>
+									<p>hello@ramlogic.co</p>
 								</div>
 								<!-- END SINGLE CONTACT INFO -->
 								<div class="single-contact-info">
 									<i class="fa fa-globe"></i>
 									<h6>website</h6>
-									<p>grupovrs.com</p>
+									<p>ramlogic.co</p>
 								</div>
 								<!-- END SINGLE CONTACT INFO -->
 							</div>
@@ -816,7 +805,7 @@
 			<div class="row">
 				<div class="col-sm-12">
 					<div class="footer-text text-center">
-						<p class="text-muted"><span>Grupo VRS</span> &copy;2020 - All Right Reserved.</p>
+						<p class="text-muted"><span>ramlogic</span> &copy;2020 - All Right Reserved.</p>
 					</div>
 				</div>
 			</div>
