Reworded many paragraphs Changed the phone number

--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
 									<div class="container">
 										<div class="row">
 											<div class="col-md-12">
-												<h2>we are a development company</h2>
-												<p>We are a software development company committed to helping businesses<br>build and improve their software products</p>
+												<h2>we are a software development company</h2>
+												<p>We are committed to helping businesses<br>build and improve their software products</p>
 												<a class="slide-btn smoth-scroll" href="#contact">contact</a>
 												<a class="slide-btn smoth-scroll" href="#about">about</a>
 											</div>
@@ -136,8 +136,8 @@
 									<div class="container">
 										<div class="row">
 											<div class="col-md-12">
-												<h2>we do web apps</h2>
-												<p>We are master of all new tech to provide world class<br>custom web app development services.</p>
+												<h2>we love web apps</h2>
+												<p>We master all new technologies to provide world class<br>custom web app development services</p>
 												<a class="slide-btn smoth-scroll" href="#contact">contact</a>
 												<a class="slide-btn smoth-scroll" href="#about">about</a>
 											</div>
@@ -156,7 +156,7 @@
 									<div class="container">
 										<div class="row">
 											<div class="col-md-12">
-												<h2>we do design & development</h2>
+												<h2>we do web design & development</h2>
 												<p>Effective branding and a well presented, robust website connects<br>with customers through the right imagery, language and
 												delivery.</p>
 												<a class="slide-btn smoth-scroll" href="#contact">contact</a>
@@ -189,10 +189,10 @@
 					<div class="section-title text-center">
 						<h2>about us</h2>
 						<span></span>
-						<p>ramlogic is a software development firm that builds advanced solutions for the financial services, healthcare,
-						hospitality and media & entertainment industries. We believe teamwork, skills, commitment, and dedication are necessary
-						to obtain excellent results. Our team stays up to date with the latest tools and frameworks in order to provide a wider
-						range of options to our clients. Combining domain knowledge with offshore cost advantages and resource flexibility,
+						<p>ramlogic is a software development company that provides services to companies in the United States and other parts of the world.
+						We provide technical, project management, and analytical skills to help customers solve their business needs. We believe teamwork, skills, commitment, and dedication are necessary
+						to obtain excellent results. We believe in the <a href="https://agilemanifesto.org/">values</a> of Agile and live by its <a href="https://agilemanifesto.org/principles.html">principles</a> so that we can deliver great value rapidly to our customers. Our team stays up to date with the latest tools and frameworks in order to provide a wider
+						range of options in any project. Combining domain knowledge with offshore cost advantages and resource flexibility,
 						ramlogic help clients optimize time-to-market and minimize software development risks in mission-critical systems.</p>
 					</div>
 				</div>
@@ -211,7 +211,7 @@
 						<h2>Our Services</h2>
 						<span></span>
 						<p>Custom software development is our core business at ramlogic. Whether you are looking for consultants, designers,
-						programmers or testers, we have great talent on board. We pride ourselves in being very responsive in customer service,
+						programmers or testers, we have a talented pool of people ready to help you. We pride ourselves in being very responsive in customer service,
 						strong on quality and effective at getting the job done.</p>
 					</div>
 				</div>
@@ -238,7 +238,7 @@
 						</div>
 						<div class="service-content">
 							<h4>DEDICATED TEAM FOR YOUR PROJECT</h4>
-							<p>In recent years dedicated team service is becoming the norm. Working on a single project, engineers has the possibility to learn the client’s requirements thoroughly and complete them as efficiently as possible.</p>
+							<p>In recent years, a dedicated team service has become the norm. When working on a single project, engineers can immerse themselves in your product requirements and deliver quicker results.</p>
 						</div>
 					</div>
 				</div>
@@ -253,7 +253,7 @@
 							<h4>SOFTWARE DEVELOPMENT</h4>
 							<p>ramlogic offers services for all phases of the software development life cycle. We work closely with our customers to
 							define project requirements, develop and test the application, as well as write documentation and user’s manuals. We
-							implement applications for a wide range of business needs, including Cloud Services.</p>
+							implement applications for a wide range of business needs , including Cloud Services.</p>
 						</div>
 					</div>
 				</div>
@@ -281,7 +281,7 @@
 						</div>
 						<div class="service-content">
 							<h4>MOBILE APPS</h4>
-							<p>We can help you create a great looking custom mobile application that fits your needs perfectly. At ramlogic we use the
+							<p>We can help you create a mobile application that fits your needs and delivers great user experience. At ramlogic we use the
 							latest tools and frameworks to deliver mobile apps for enterprise, entertainment, and social media. We are committed to
 							helping you make your ideas become reality.</p>
 						</div>
@@ -296,9 +296,8 @@
 						</div>
 						<div class="service-content">
 							<h4>DESKTOP APPS</h4>
-							<p>Many years of successful work in the area of custom application development has given us great experience. Now as an
-							offshore professional software development company, we are able to implement projects of any degree of difficulty: from
-							small business process automation up to large-scale enterprise management systems.</p>
+							<p>Many years of successful work in the area of application development has given us a great level of experience and confidence to take on any project. 
+							We are able to take on challenges of any degree of difficulty: from small business process automation up to large-scale enterprise management systems.</p>
 						</div>
 					</div>
 				</div>
@@ -411,7 +410,7 @@
 					<div class="col-md-4 col-sm-4">
 						<div class="single-featured">
 							<i class="fa fa-code"></i>
-							<h4>tdd</h4>
+							<h4>react</h4>
 						</div>
 					</div>
 					<!-- END SINGLE FEATURED -->
@@ -694,7 +693,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-12 col-sm-12 no-padding">
-					<!-- START CONTACT FROM -->
+					<!-- START CONTACT FORM -->
 					<div class="contact-from">
 						<form action="#" method="post">
 							<div class="form-group col-md-6">
@@ -714,7 +713,7 @@
 							</div>
 						</form>
 					</div>
-					<!-- END CONTACT FROM -->
+					<!-- END CONTACT FORM -->
 				</div>
 			</div>
 		</div>
@@ -730,7 +729,8 @@
 					<div class="col-md-3 col-sm-6">
 						<div class="footer-widget">
 							<h4 class="footer-logo"><span>ramlogic</span></h4>
-							<p>A software developer company</p>
+							<p>ramlogic is a software development company that provides services to companies in the United States and other parts of the world.
+								We provide technical, project management, and analytical skills to help customers solve their business needs.</p>
 						</div>
 					</div>
 					<!-- END SINGLE WIDGET -->
@@ -771,7 +771,7 @@
 								<div class="single-contact-info">
 									<i class="fa fa-phone"></i>
 									<h6>phone</h6>
-									<p>+1 276 759 9630</p>
+									<p>+1 (925) 967-2077‬</p>
 								</div>
 								<!-- END SINGLE CONTACT INFO -->
 								<!-- START SINGLE CONTACT INFO -->
